--- a/resources/lang/id.json
+++ b/resources/lang/id.json
@@ -4,5 +4,10 @@
     "Profile": "Profil",
     "Remember me": "Ingat saya",
     "Login": "Masuk",
-    "Logout": "Keluar"
+    "Logout": "Keluar",
+
+    "Showing": "Menampilkan",
+    "to": "-",
+    "of": "dari",
+    "results": "data"
 }
